# terminal_invaders

./: .gitignore  CMakeLists.txt  Makefile  README.md  aliens.c  aliens.h  main.c  main.h
include/: aliens.h  bullets.h  c_window.h  main.h  ship.h
src/: CMakeLists.txt  aliens.c  bullets.c  c_window.c  main.c  ship.c
test/: CMakeLists.txt  test_alien.cpp  test_bullet.cpp  test_main.cpp
